# sui

./: .gitignore  Cargo.toml
external-crates/move/solana/move-mv-llvm-compiler/: Cargo.toml
external-crates/move/solana/move-mv-llvm-compiler/docs/: Administration.md  Development.md
external-crates/move/solana/move-mv-llvm-compiler/src/: cli.rs  main.rs  package.rs
external-crates/move/solana/move-mv-llvm-compiler/tests/: ir-tests.rs  rbpf-tests.rs  stdlib-with-p-option-tests.rs  test_common.rs
external-crates/move/solana/move-mv-llvm-compiler/tests/cli-tests/: basic-coin.move
external-crates/move/solana/move-mv-llvm-compiler/tests/cli-tests/basic-coin/: Move.toml
external-crates/move/solana/move-mv-llvm-compiler/tests/dwarf-tests/basic-coin-build/: 0xcafe__BasicCoin.ll.debug_info.expected
external-crates/move/solana/move-mv-llvm-compiler/tests/dwarf-tests/dwarf-functions-build/: 0x101__M.ll.debug_info.expected  0x201__M.ll.debug_info.expected
external-crates/move/solana/move-mv-llvm-compiler/tests/dwarf-tests/dwarf-struct-2-modules-build/: 0x101__M.ll.debug_info.expected  0x201__M.ll.debug_info.expected
external-crates/move/solana/move-mv-llvm-compiler/tests/dwarf-tests/dwarf-struct-build/: 0x100__M.ll.debug_info.expected
external-crates/move/solana/move-mv-llvm-compiler/tests/dwarf-tests/dwarf-vector-build/: 0x101__vector.ll.debug_info.expected
external-crates/move/solana/move-mv-llvm-compiler/tests/move-ir-tests/: assign.move  debug-print.move  multi-module.move
external-crates/move/solana/move-mv-llvm-compiler/tests/move-ir-tests/acct-address01-build/modules/: 0_M3.expected.ll
external-crates/move/solana/move-mv-llvm-compiler/tests/move-to-llvm-tests/: multi-module.move
external-crates/move/solana/move-mv-llvm-compiler/tests/move-to-llvm-tests/multi-module-build/: 0x10__Test.ll.expected
external-crates/move/solana/move-mv-llvm-compiler/tests/rbpf-tests/: abort.move  acct-address01.move  addu128-dyn-checks.move  addu32-dyn-checks.move  addu64-dyn-checks.move  addu8-dyn-checks.move  assert.move  bitwise-rangechk-abort.move  bitwise128-rangechk-abort.move  bitwise16-rangechk-abort.move  bitwise256-rangechk-abort.move  bitwise32-rangechk-abort.move  bitwise64-rangechk-abort.move  call-foreign-2.move  call-local.move  cast-u128-to-u16-rangechk-abort.move  cast-u128-to-u32-rangechk-abort.move  cast-u128-to-u64-rangechk-abort.move  cast-u128-to-u8-rangechk-abort.move  cast-u16-to-u8-rangechk-abort.move  cast-u256-to-u128-rangechk-abort.move  cast-u256-to-u16-rangechk-abort.move  cast-u256-to-u32-rangechk-abort.move  cast-u256-to-u64-rangechk-abort.move  cast-u256-to-u8-rangechk-abort.move  cast-u32-to-u16-rangechk-abort.move  cast-u32-to-u8-rangechk-abort.move  cast-u64-to-u16-rangechk-abort.move  cast-u64-to-u32-rangechk-abort.move  cast-u64-to-u8-rangechk-abort.move  check-dup-private-func.move  debug-print.move  divu32-dyn-checks.move  dupe-fn-name.move  eq-u128.move  eq-u16.move  eq-u256.move  eq-u32.move  eq-u64.move  eq-u8.move  (+51 more)
external-crates/move/solana/move-mv-llvm-compiler/tests/rbpf-tests/basic/: Move.toml
external-crates/move/solana/move-mv-llvm-compiler/tests/rbpf-tests/struct-nested/: Move.toml
external-crates/move/solana/move-mv-llvm-compiler/tests/stdlib-tests/hash_tests-build/: 0x1__hash.ll.expected  0x1__hash_tests.ll.expected  0x1__unit_test.ll.expected
external-crates/move/solana/move-mv-llvm-compiler/tests/stdlib-with-p-option-tests/hash_tests-build/: 0x1__hash.ll.expected  0x1__hash_tests.ll.expected  0x1__unit_test.ll.expected  solana_entrypoint.ll
external-crates/move/solana/move-to-solana/: Cargo.toml
external-crates/move/solana/move-to-solana/src/: lib.rs  options.rs
external-crates/move/solana/move-to-solana/src/stackless/: entrypoint.rs  extensions.rs  llvm.rs  rttydesc.rs  translate.rs
scripts/: acquire_solana_tools.sh  cargo_audit.sh  dev_setup.sh
(+68 files in other folders)
