[package]
name = "move-mv-llvm-compiler"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Generate LLVM IR from Move bytecode (.mv files)"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.52"
colored = "2.0.0"
env_logger = "0.8.3"
libc = "0.2"
log = "0.4.14"
chrono = "0.4"
once_cell = "1.10"
parking_lot = "0.11"
toml = "0.5.8"
regex = "1.1.9"
rand = "0.8"
move-bytecode-verifier.workspace = true
move-bytecode-source-map.workspace = true
move-command-line-common.workspace = true
move-core-types.workspace = true
move-ir-types.workspace = true
move-binary-format.workspace = true
move-coverage.workspace = true
move-compiler.workspace = true
move-model.workspace = true
move-native.workspace = true
move-stackless-bytecode.workspace = true
move-stdlib.workspace = true
move-symbol-pool.workspace = true
move-cli.workspace = true
move-package.workspace = true
move-to-solana.workspace = true
clap = { version = "3.1.8", features = ["derive"] }
semver = "1.0.13"
llvm-sys = "150.0.3"
extension-trait = "1.0.1"
num = "0.4.0"
num-traits = "0.2"
codespan = "0.11.1"
codespan-reporting = "0.11.1"

[dev-dependencies]
datatest-stable = "0.1.1"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
similar = "2.1.0"
solana-bpf-loader-program = { git = "https://github.com/solana-labs/solana", rev = "5d1538013206c1afe6f9d3c8a1a870cb0bfa9dcd" }
solana-program-runtime = { git = "https://github.com/solana-labs/solana", rev = "5d1538013206c1afe6f9d3c8a1a870cb0bfa9dcd" }
solana-sdk = { git = "https://github.com/solana-labs/solana", rev = "5d1538013206c1afe6f9d3c8a1a870cb0bfa9dcd" }
solana_rbpf = "=0.7.1"
thiserror = "1.0.37"

[features]
solana = []
default = ["solana"]

[[test]]
name = "ir-tests"
harness = false

[[test]]
name = "move-ir-tests"
harness = false

[[test]]
name = "rbpf-tests"
harness = false

[[test]]
name = "move-to-llvm-tests"
harness = false

[[test]]
name = "stdlib-tests"
harness = false

[[test]]
name = "stdlib-with-p-option-tests"
harness = false

[[test]]
name = "cli-tests"
harness = false

[[test]]
name = "dwarf-tests"
harness = false
