[package]
name = "move-to-solana"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Generate An Instruction Set code from Move"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.52"
atty = "0.2.14"
blake3 = "0.1.5"
bs58 = "0.5.0"
chrono = "0.4"
clap = { version = "3.1.8", features = ["derive"] }
codespan = "0.11.1"
codespan-reporting = "0.11.1"
colored = "2.0.0"
env_logger = "0.8.3"
extension-trait = "1.0.1"
itertools = "0.10"
libc = "0.2"
llvm-sys = "150.0.3"
log = "0.4.14"
move-binary-format.workspace = true
move-bytecode-source-map.workspace = true
move-command-line-common.workspace = true
move-compiler.workspace = true
move-core-types.workspace = true
move-ir-types.workspace = true
move-model.workspace = true
move-native.workspace = true
move-stackless-bytecode.workspace = true
move-symbol-pool.workspace = true
num = "0.4.0"
num-traits = "0.2"
once_cell = "1.10"
parking_lot = "0.11"
regex = "1.1.9"
semver = "1.0.13"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
solana-bpf-loader-program = { git = "https://github.com/solana-labs/solana", rev = "5d1538013206c1afe6f9d3c8a1a870cb0bfa9dcd" }
solana-program-runtime = { git = "https://github.com/solana-labs/solana", rev = "5d1538013206c1afe6f9d3c8a1a870cb0bfa9dcd" }
solana-sdk = { git = "https://github.com/solana-labs/solana", rev = "5d1538013206c1afe6f9d3c8a1a870cb0bfa9dcd" }
solana_rbpf = "=0.7.1"
tempfile = "3.2"

[features]
solana = []
default = ["solana"]
